--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,12 +6,13 @@ authors = ["ubaumann <github@m.ubaumann.ch>"]
 
 [tool.poetry.dependencies]
 python = "^3.8"
-nuts = "^3.0.1"
 nornir-scrapli = "^2021.1.30"
+nuts = {path = "../nuts"}
 
 [tool.poetry.dev-dependencies]
 pytest = "^6.2"
 black = "^21.7b0"
+rich = "^10.6.0"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
